@@ -1,0 +1,3 @@
+Tests a crash in the regular expression engine. If this stops with a single "regular expression too large" exception, then the test succeeded.
+
+Got up to iteration 1872 and then got this exception: SyntaxError: Invalid regular expression: regular expression too large.
